svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-central-1:026818071735:certificate/9ae39f3e-77d0-4ea1-aec9-241688f04257
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: 443, 80
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
  labels:
    app: ma2-sonar-service
  name: ma2-sonar-service
  namespace: commons
spec:
  externalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: tcps
    nodePort: 31958
    port: 443
    protocol: TCP
    targetPort: 9000
  selector:
    app: ma2-sonar-service
  sessionAffinity: None
  type: LoadBalancer
