ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:026818071735:certificate/9ae39f3e-77d0-4ea1-aec9-241688f04257
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: sonar-ingress
  namespace: commons
spec:
  rules:
  - host: sonar.dev.ma.halo-telekom.com
    http:
      paths:
      - backend:
          service:
            name: ma2-sonar-service
            port:
              number: 443
        path: /
        pathType: Prefix
